--- a/iothub/service/src/Microsoft.Azure.Devices.csproj
+++ b/iothub/service/src/Microsoft.Azure.Devices.csproj
@@ -23,7 +23,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>1.22.0</Version>
+    <Version>1.22.0.1</Version>
     <Title>Microsoft Azure IoT Service Client SDK</Title>
     <IncludeSource>True</IncludeSource>
     <IncludeSymbols>True</IncludeSymbols>
@@ -49,6 +49,9 @@
 
   <PropertyGroup>
     <common>$(RootDir)\common\src</common>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <AssemblyVersion>1.22.0.1</AssemblyVersion>
+    <FileVersion>1.22.0.1</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -118,7 +121,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="Microsoft.Azure.Amqp" Version="2.4.4" />
   </ItemGroup>
 
